[RunLoopGeneric] OneShotTimer should be inactive when fired. https://bugs.webkit.org/show_bug.cgi?id=189335

Reviewed by Yusuke Suzuki.

Source/WTF:

* wtf/generic/RunLoopGeneric.cpp:
(WTF::RunLoop::TimerBase::ScheduledTask::fired):
(WTF::RunLoop::TimerBase::isActive const):

Deactivate one-shot timer before invoking its callback.

Tools:

* TestWebKitAPI/Tests/WTF/RunLoop.cpp:
(TestWebKitAPI::TEST):

Add test expectations about timer's active state.

Add a new test to restart a one-shot timer within
its fired callback.


Canonical link: https://commits.webkit.org/204386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235784 268f45cc-cd09-0410-ab3c-d52691b4dbfc