Source/WTF/wtf/generic/RunLoopGeneric.cpp
@@ -50,12 +50,13 @@ public:
         if (!isActive())
             return false;
 
+        if (!m_isRepeating)
+            deactivate();
+
         m_function();
 
-        if (!m_isRepeating)
-            return false;
-
-        updateReadyTime();
+        if (isActive())
+            updateReadyTime();
         return isActive();
     }
 
@@ -290,7 +291,7 @@ bool RunLoop::TimerBase::isActive() const
 
 bool RunLoop::TimerBase::isActive(const AbstractLocker&) const
 {
-    return m_scheduledTask;
+    return m_scheduledTask && m_scheduledTask->isActive();
 }
 
 Seconds RunLoop::TimerBase::secondsUntilFire() const
